--- a/template/req.html
+++ b/template/req.html
@@ -1,10 +1,10 @@
-#Thanks @Kingvj01 helping this journey 
+#Thanks @My_Name_is_developer helping this journey 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" type="image/x-icon">
-    <meta property="og:image" content="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" itemprop="thumbnailUrl">
+    <link rel="shortcut icon" href="https://telegra.ph/file/7f2d5fc700e6698432e42.jpg" type="image/x-icon">
+    <meta property="og:image" content="https://telegra.ph/file/7f2d5fc700e6698432e42.jpg" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{file_name}} | Tech VJ</title>
@@ -38,32 +38,32 @@
                     </div>
                     <div class="d-flex ">
                         <!-- logo -->
-                        <img src="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
+                        <img src="https://telegra.ph/file/7f2d5fc700e6698432e42.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
                         <div class="p-3">
                             <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >TEAM-RIO-NETWORKS</h4>
                             <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">The one & Only</p>
                         </div>
                     </div>
-                    <a href="https://github.com/VJBots" target="_blank" class="btn btn-dark w-100 text-light fw-semibold flex justify-center items-center gap-2 mt-2 wow animate__animated animate__fadeInDown  ">
+                    <a href="https://github.com/ALAS_NOW" target="_blank" class="btn btn-dark w-100 text-light fw-semibold flex justify-center items-center gap-2 mt-2 wow animate__animated animate__fadeInDown  ">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                           </svg>    
                         Follow TEAM-VJ-NETWORKS
                     </a>
                     <div class="d-flex gap-1 px-1 mt-1 wow animate__animated animate__fadeInLeft animate__delay-1s ">
-                        <a href="https://teleram.me/KingVJ01" target="_blank" class="btn btn-secondary w-50 text-light fw-semibold flex justify-center items-center gap-2 text-xs">
+                        <a href="https://teleram.me/My_Name_is_developer" target="_blank" class="btn btn-secondary w-50 text-light fw-semibold flex justify-center items-center gap-2 text-xs">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
                                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"/>
                               </svg>
                             Updates
                         </a>
-                        <a href="https://telegram.me/vj_bots" target="_blank" class="btn btn-primary w-50 text-light  fw-semibold flex justify-center items-center gap-2 text-xs">
+                        <a href="https://telegram.me/ALAS_NOW" target="_blank" class="btn btn-primary w-50 text-light  fw-semibold flex justify-center items-center gap-2 text-xs">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-git" viewBox="0 0 16 16">
                                 <path d="M15.698 7.287 8.712.302a1.03 1.03 0 0 0-1.457 0l-1.45 1.45 1.84 1.84a1.223 1.223 0 0 1 1.55 1.56l1.773 1.774a1.224 1.224 0 0 1 1.267 2.025 1.226 1.226 0 0 1-2.002-1.334L8.58 5.963v4.353a1.226 1.226 0 1 1-1.008-.036V5.887a1.226 1.226 0 0 1-.666-1.608L5.093 2.465l-4.79 4.79a1.03 1.03 0 0 0 0 1.457l6.986 6.986a1.03 1.03 0 0 0 1.457 0l6.953-6.953a1.031 1.031 0 0 0 0-1.457"/>
                               </svg>
                             Fork repo
                         </a>
-                        <a href="https://youtube.com/@Tech_VJ" target="_blank" class="btn btn-danger w-50 text-light fw-semibold flex justify-center items-center gap-2 text-xs">
+                        <a href="https://youtube.com/ALAS" target="_blank" class="btn btn-danger w-50 text-light fw-semibold flex justify-center items-center gap-2 text-xs">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
                                 <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
                               </svg>
@@ -76,12 +76,12 @@
                         <h2 class="font-semibold" style="text-shadow: 1px 2px 8px black;">Explore</h2>
                     </div>
                     <div class=" d-block px-5 wow animate__animated animate__fadeInRight ">
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Trending Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Newly Released Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Popular on MoviesAdda</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Bollywood Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Hollwood Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">webseries</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Trending Movies</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1">Newly Released Movies</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1">Popular on MoviesAdda</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1">Bollywood Movies</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1">Hollwood Movies</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1">webseries</a>
                     </div>
                     
                 <!-- section -->
@@ -122,7 +122,7 @@
 
                 <!-- web title -->
                 <div class="container-fluid">
-                    <a class="navbar-brand  text-light fw-bold " href="https://t.me/tamilmovies4Krio">
+                    <a class="navbar-brand  text-light fw-bold " href="https://t.me/ALAS_NOW">
                         <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
                             For Movies 
                           </span>
@@ -291,13 +291,13 @@
             </div>
             <hr>
             <div class="text-center text-xs p-3 dark:text-light text-light gap-2" style="background-color: rgba(0, 0, 0, 0.2);">
-                <!-- For VJ & Kingvj01 // credit --- Please don't remove footer credit -->
+                <!-- For ALAS & My_Name_is_developer // credit --- Please don't remove footer credit -->
             ©  <script type="text/JavaScript">
                 var theDate=new Date() 
                     document.write(theDate.getFullYear()) 
             </script> Copyright :
                 <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/vj_bots">VJ</a>
-                <!--🥰  Thank you for giving me credit @kingvj01 & @kingvj01  🥰 -->
+                <!--🥰  Thank you for giving me credit @My_Name_is_developer & @My_Name_is_developer  🥰 -->
                 All right reserved
             </div>   
         </footer>
@@ -316,7 +316,7 @@
         }
 
     </script>
-    <!--🥰  Thank you for giving me credit @kingvj01  🥰 -->
+    <!--🥰  Thank you for giving me credit @My_Name_is_developer  🥰 -->
     <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
 	<script>
         const controls = [
@@ -365,7 +365,7 @@
     </script>
     
     
-    <!--🥰  Thank you for giving me credit @kingvj01 🥰 -->
+    <!--🥰  Thank you for giving me credit @My_Name_is_developer 🥰 -->
     <script>
         const videolink = window.location.href;
         const  lazyLink = videolink.replace("/watch/", "/");
@@ -413,7 +413,7 @@
 
     </script>
 
-    <!--🥰 Thanks you for giving me credit @kingvj01  🥰 -->
+    <!--🥰 Thanks you for giving me credit @My_Name_is_developer  🥰 -->
 </body>
 </html>
 
